spring-boot-demo/kubernetes/gke/https/ingress-ssl-secret.yaml
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "spring-boot-demo-ingress"
  namespace: "default"
  annotaions:
	kubernetes.io/ingress.global-static-ip-name: "spring-boot-demo-static-ip"
spec:
  tls:
  - secretName: spring-boot-demo-secret
  backend:
    serviceName: "spring-boot-demo-service"
    servicePort: 8080
